k8s/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp1
  name: webapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
      version: dev1
  template:
    metadata:
      labels:
        app: webapp1
        version: dev1
        maistra.io/expose-route: "true"
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - image: quay.io/monishkumar/project-demo:dev1
          imagePullPolicy: Always
          name: webapp1
          ports:
          - name: tcp-8080
            containerPort: 8080
            protocol: TCP
