k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
    version: dev
  ports:
    - name: "tcp-8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
