k8s/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp1
spec:
  type: ClusterIP
  selector:
    app: webapp1
  ports:
    - name: "tcp-8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
