k8s/route1.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: webapp1
spec:
  to:
    kind: Service
    name: webapp1
    weight: 100
  path: /WebApp    
  port:
    targetPort: "tcp-8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
